update object literals

--- a/index.html
+++ b/index.html
@@ -859,6 +859,103 @@ console.log(detail);
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <h1>lecture</h1>
+                <p>Introduction Loop</p>
+            </div>
+            <div class="col-2">
+                    <p>
+                        </p>
+                    <h1 class="answer">Output: <span class="h1"></span>
+                      &nbsp; <span class="h1"></span>  </h1>
+            </div>
+        </div>
+
        </section>
     </main>
     <script src="script.js"></script>
